=================================
INTER-Mediator Change Log
by Masayuki Nii
msyk@msyk.net
=================================

http://inter-mediator.org/
Change Log will be supplied by English only.
Latest changes might exist on the GitHub repository. Please check https://github.com/msyk/INTER-Mediator.

Ver.4.6 (in development)
- In case of 'navi-control' is 'master-hide', the pagenation control is going to hide when the detail area appears.
- Use fmresultset XML grammer internally in getFromDB method of DB_FileMaker_FX class.
- The Date/Time functions are available in the expression of 'calculation' value.
- Support syncing with multiple clients with Pusher using FileMaker datasource (except for portal=>true context).
- Query conditions, sort fields, record number and updating context can be described in data-im attributes.
  This feature realizes non-programming search page.
- [INFO] FileMaker Server 10 has been deprecated. INTER-Mediator will require FileMaker Server 11 or later if using 
  FileMaker Server.
- [BUG FIX] DB_FileMaker_FX used the alternative data source not only the 'issuedhash' table also 'authuser' and some
  tables for authorization/authentication. Now, it uses just the 'issuedhash' table for the alternative data source.
- [BUG FIX] Calculation for strings didn't work, ex. >...
- [BUG FIX] The target description with "style.display" for the calculated field is working.
- [BUG FIX] The file upload component failed to update the related context.
- [BUG FIX] Fix outputting error messages in DB_PDO class correctly in some cases.
- [BUG FIX] Handle 'for' attribute of the 'label' element to enable editing a correct record using radio button when 
  displaying multiple records (Thanks to Kentaro Suzuki).
- [BUG FIX] Fix the FileMaker's checkbox set feature when using Internet Explorer 9 or 10 (Thanks to Kentaro Suzuki).
- [BUG FIX] Fix showing related fields not on the FileMaker's portal objects in some cases (Thanks to Kentaro Suzuki).