@@ -1,24 +1,0 @@
-/*
- * INTER-Mediator Ver.@@@@2@@@@ Released @@@@1@@@@
- * 
- *   by Masayuki Nii  msyk@msyk.net Copyright (c) 2010-2014 Masayuki Nii, All rights reserved.
- * 
- *   This project started at the end of 2009.
- *   INTER-Mediator is supplied under MIT License.
- */
-
-#detailarea {
-    cursor: pointer;
-}
-
-.price {
-    text-align: right;
-}
-
-.shown {
-    display: block;
-}
-
-.hidden {
-    display: none;
-}
